fixed display issue with 3 columns on small screens

--- a/css/bundle.css
+++ b/css/bundle.css
@@ -99,13 +99,6 @@ body {
 	.componentLabel{
 		max-width: 120px;
 	}
-
-	.numberCounter{
-		margin-left: 5px;
-		margin-right: 5px;
-		max-width: none;
-		width:15px;
-	}
 	
 }
 
@@ -138,6 +131,10 @@ body {
 
 	.numberCounter{
 		font-size: 18px;
+	}
+	.numberCounter{
+		max-width: none;
+		width:15px;
 	}
 	
 }
